--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </section>
 
 <section>
-    <h2>What are we doing</h2>
+    <h2>What Are We Doing</h2>
 <ul>
     <li>
         <h3>Strategy</h3>
